--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ bokeh==0.12.5
 certifi==2019.6.16
 chardet==3.0.4
 Click==7.0
+Cython==0.29.13
 Flask==0.12.2
 idna==2.8
 itsdangerous==1.1.0
@@ -10,7 +11,6 @@ Jinja2==2.10.1
 MarkupSafe==1.1.1
 numpy==1.17.0
 packaging==19.1
-pandas==0.25.0
 Pillow==6.1.0
 pyparsing==2.4.2
 python-dateutil==2.8.0
