--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Jinja2==2.10.1
 MarkupSafe==1.1.1
 numpy==1.17.0
 packaging==19.1
+pandas==0.24.2
 Pillow==6.1.0
 pyparsing==2.4.2
 python-dateutil==2.8.0
